[gd_scene load_steps=7 format=3 uid="uid://cchcqh5o1ixo3"]

[ext_resource type="Script" path="res://Enemy/soldier_sword.gd" id="1_3ss0j"]
[ext_resource type="SpriteFrames" uid="uid://b4x3yeq2lfkdo" path="res://Enemy/soldier_sword.tres" id="2_4l46p"]
[ext_resource type="Texture2D" uid="uid://dwvqaayw0g8pm" path="res://assets/icons/skull.PNG" id="5_pkrwr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twvmg"]
size = Vector2(44.7204, 72.0286)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvvxf"]
size = Vector2(74.8906, 87.2817)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1l6w"]
size = Vector2(107.13, 58.5762)

[node name="enemy" type="Area2D"]
position = Vector2(-1, 0)
scale = Vector2(1.16837, 1.18009)
collision_layer = 10
collision_mask = 5
script = ExtResource("1_3ss0j")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(-5.96046e-08, 0)
collision_layer = 2
collision_mask = 7

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(0, -7.62939e-06)
scale = Vector2(0.068129, 0.0769081)
sprite_frames = ExtResource("2_4l46p")
animation = &"dead"
frame_progress = 0.888888

[node name="enemy_pos" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 1.27109)
shape = SubResource("RectangleShape2D_twvmg")

[node name="death_timer" type="Timer" parent="CharacterBody2D"]
wait_time = 0.5
one_shot = true

[node name="skull" type="Sprite2D" parent="CharacterBody2D"]
visible = false
position = Vector2(0, -57.6227)
scale = Vector2(0.041038, 0.0365869)
texture = ExtResource("5_pkrwr")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.855896, -2.96588)
shape = SubResource("RectangleShape2D_pvvxf")

[node name="attack_windup" type="Timer" parent="."]
wait_time = 0.5

[node name="attack" type="Area2D" parent="."]
collision_layer = 8

[node name="attack_left" type="CollisionShape2D" parent="attack"]
position = Vector2(-81.3098, -3.38958)
shape = SubResource("RectangleShape2D_n1l6w")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.654902)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CharacterBody2D/death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="attack_windup" to="." method="_on_attack_windup_timeout"]
